# mirage-ci

./: .dockerignore  .env.in  .gitignore  .merlin  .travis.yml  Dockerfile  Dockerfile.opam-diff  Makefile  README.md  _tags  docker-compose.yml  dune-project  init-new-state-repo.sh  mirage-ci.opam  opam  opam-repo-ci.yml  reset.sh
doc/: api.odocl  dev.odocl
pkg/: META  pkg.ml
scripts/: copy-keys.sh  opam-github-pr-diff  parse_fails.ml
src/: .merlin  datakit_toml.ml  datakit_toml.mli  docker_build.ml  docker_build.mli  docker_ops.ml  docker_ops.mli  docker_pull.ml  docker_pull.mli  docker_run.ml  docker_run.mli  dockerfile_conv.ml  dockerfile_conv.mli  dune  jbuild  mirage-ci.mllib  mirage_ci.ml  ocaml_version.ml  ocaml_version.mli  opam_build.ml  opam_build.mli  opam_bulk_build.ml  opam_bulk_build.mli  opam_bulk_build_diff.ml  opam_docker.ml  opam_docker.mli  opam_ops.ml  opam_ops.mli  oversions.ml  oversions.mli  pool.ml  pool.mli  term_utils.ml  term_utils.mli  toml_reader.ml  toml_reader.mli  worker.ml
src-bin/: .merlin  avsmCI.ml  datakitToml.ml  dune  jbuild  mirageCI.ml  opam-bulk-scry.ml  opamBulkCI.ml  opamCI.ml  opamHeadCI.ml  opamRepoCI.ml
test/: test.ml
