opam-version: "1.2"
maintainer: "Anil Madhavapeddy <anil@recoil.org>"
authors: ["Anil Madhavapeddy" "Thomas Gazagnaire" "Thomas Leonard" "Dave Tucker" ]
homepage: "https://github.com/avsm/mirage-ci"
doc: "http://docs.mirage.io/mirage-ci/"
license: "ISC"
dev-repo: "https://github.com/avsm/mirage-ci.git"
bug-reports: "https://github.com/avsm/mirage-ci/issues"
tags: [ "org:mirage" "org:ocamlabs"]
available: [ ocaml-version >= "4.03.0"]
depends: [
  "jbuilder" {build & >="1.0+beta9"}
  "ppx_sexp_conv" {build}
  "dockerfile-cmd"
  "datakit-ci" {>="0.12.0"}
  "datakit-client" {>="0.11.0"}
  "fpath"
  "asetmap"
  "bos"
  "cmdliner"
  "rresult"
  "sexplib"
  "ptime"
  "ocaml-version"
]
build: [
  ["jbuilder" "subst" "-p" name "--name" name] {pinned}
  ["jbuilder" "build" "-p" name "-j" jobs]
]
