opam-version: "2.0"
maintainer: "Anil Madhavapeddy <anil@recoil.org>"
authors: [
  "Anil Madhavapeddy"
  "Thomas Gazagnaire"
  "Thomas Leonard"
  "Dave Tucker"
  "Kate <kit.ty.kate@disroot.org>"
]
synopsis: "Continuous Integration for MirageOS using DataKit's git workflow"
homepage: "https://github.com/avsm/mirage-ci"
doc: "http://docs.mirage.io/mirage-ci/"
license: "ISC"
dev-repo: "git://github.com/avsm/mirage-ci.git"
bug-reports: "https://github.com/avsm/mirage-ci/issues"
tags: ["org:mirage" "org:ocamlabs"]
depends: [
  "ocaml" {>= "4.03.0"}
  "jbuilder" {build & >="1.0+beta9"}
  "ppx_sexp_conv"
  "dockerfile-cmd"
  "datakit-ci" {>= "0.12.0"}
  "datakit-client" {>= "0.11.0"}
  "fpath"
  "asetmap"
  "bos"
  "cmdliner"
  "rresult"
  "sexplib"
  "ptime"
  "ocaml-version"
]
build: [
  ["jbuilder" "subst" "-p" name "--name" name] {pinned}
  ["jbuilder" "build" "-p" name "-j" jobs]
]
